--- a/src/components/cards/showShipmentInfo.css
+++ b/src/components/cards/showShipmentInfo.css
@@ -1,4 +1,3 @@
-
 .withRibbon .card .card__container {
     padding: 2rem 0;
     width: 100%;
@@ -8,13 +7,28 @@
     position: relative;
 }
 
+.withRibbon .card .items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+@media (max-width: 768px) {
+
+    .withRibbon .card .items {
+        flex-direction: column;
+        align-items: start;
+    }
+
+}
 
 .withRibbon .card::before {
     position: absolute;
     top: 2rem;
     right: -0.5rem;
     content: '';
-    background: #283593;
+    background: var(--color-primary);
     height: 28px;
     width: 28px;
     transform: rotate(45deg);
@@ -27,9 +41,10 @@
     right: -14px;
     padding: 0.5rem;
     width: 10rem;
-    background: #3949ab;
+    background: var(--color-primary);
     color: white;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     box-shadow: 4px 4px 15px rgba(26, 35, 126, 0.2);
 }
+
