--- a/src/components/cards/showShipmentInfo.css
+++ b/src/components/cards/showShipmentInfo.css
@@ -48,3 +48,55 @@
     box-shadow: 4px 4px 15px rgba(26, 35, 126, 0.2);
 }
 
+.withRibbon .member {
+    position: relative;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 0px;
+    border-radius: 5px;
+    background: #fff;
+    transition: 0.5s;
+}
+
+.withRibbon .member .pic {
+    overflow: hidden;
+    width: 90px;
+    border-radius: 5px;
+}
+
+.withRibbon .member .pic img {
+    transition: ease-in-out 0.3s;
+}
+
+.withRibbon .member:hover {
+    transform: translateY(-10px);
+}
+
+.withRibbon .member .member-info {
+    padding-left: 30px;
+}
+
+.withRibbon .member h4 {
+    font-weight: 700;
+    margin-bottom: 5px;
+    font-size: 16px;
+    color: #37517e;
+}
+
+.withRibbon .member span {
+    display: block;
+    font-size: 13px;
+    position: relative;
+    font-weight: 500;
+}
+
+.withRibbon .member span::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 1px;
+    background: #cbd6e9;
+    bottom: 0;
+    left: 0;
+}
+
